# KNN-Classifier

./: CMakeLists.txt  README.md
classifier/: Algorithms.cpp  Algorithms.h  Classified.cpp  Classified.h  Classifier.cpp  Classifier.h
classifier/distance/: ChebyshevDistance.cpp  ChebyshevDistance.h  Distance.h  EuclideanDistance.cpp  EuclideanDistance.h  ManhattanDistance.cpp  ManhattanDistance.h
classifierData/: ClassifierData.cpp  ClassifierData.h
cli/: Cli.cpp  Cli.h  Command.h  Socket.h
cli/IO/: DefaultIO.h  SocketIO.cpp  SocketIO.h  StandardIO.cpp  StandardIO.h
cli/command/: ClassifyCommand.cpp  ClassifyCommand.h  Command.cpp  Command.h  DisplayConfusionMatrixCommand.cpp  DisplayConfusionMatrixCommand.h  DisplayResultsCommand.cpp  DisplayResultsCommand.h  DownloadResults.h  DownloadResultsCommand.cpp  DownloadResultsCommand.h  SettingsCommand.cpp  SettingsCommand.h  UploadCommand.cpp  UploadCommand.h
cli/io/: DefaultIO.h  SocketIO.cpp  SocketIO.h  StandardIO.cpp  StandardIO.h
client/: Client.cpp  Client.h  ClientMain.cpp  client.cpp  main.cpp
server/: ServerMain.cpp  ServerMain.h  server.cpp
socket/: ClientSocket.cpp  ClientSocket.h  ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h
